fix padding on smaller screen modal have padding

--- a/components/src/components/modal/modal.scss
+++ b/components/src/components/modal/modal.scss
@@ -54,6 +54,10 @@ $modals: (
   z-index: 40000;
   background-color: var(--sdds-modal-backdrop);
   padding: 0 16px;
+
+  @media(max-width: $screen-s) {
+    padding: 0;
+  }
 }
 
 :host(.show) {
